Fixed few layout issues and added signup feature

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -375,7 +375,8 @@ hr {
 /* Sign up here */
 .signup-container {
   width: 100%;
-  max-width: 450px;
+  max-width: 400px;
+  max-height: fit-content;
   padding: 2rem;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -390,7 +391,7 @@ hr {
 
 .signup-form label {
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
   font-weight: 600;
   color: #484848;
 }
